# testfastapi

./: .gitignore  aerich.ini  pyproject.toml
app/: asgi.py  main.py  router.py
app/core/: config.py  error.py
app/models/: __init__.py  users.py
app/settings/: settings.py
app/views/: account.py  pic.py  user_info.py  users.py
migrations/models/: 0_202057070920105732_init.json  old_models.py
